# psi-plus-cmake

./: CMakeLists.txt  README.md  psi_headers.cmake  psi_resources.cmake  psi_sources.cmake  psi_uis.cmake
cmake/modules/: FindHunspell.cmake  FindIDN.cmake  FindLibGcrypt.cmake  FindLibGpgError.cmake  FindLibOtr.cmake  FindLibTidy.cmake  FindQJDns.cmake  FindQca-qt5.cmake  FindZLIB.cmake
iris/: CMakeLists.txt  libiris_headers.cmake  libiris_includes.cmake  libiris_sources.cmake
iris/src/irisnet/: CMakeLists.txt
iris/src/xmpp/: CMakeLists.txt
plugins/: CMakeLists.txt
plugins/generic/: CMakeLists.txt
plugins/generic/attentionplugin/: CMakeLists.txt
plugins/generic/autoreplyplugin/: CMakeLists.txt
plugins/generic/captchaformsplugin/: CMakeLists.txt
plugins/generic/cleanerplugin/: CMakeLists.txt
plugins/generic/contentdownloaderplugin/: CMakeLists.txt
plugins/generic/extendedmenuplugin/: CMakeLists.txt
plugins/generic/extendedoptionsplugin/: CMakeLists.txt
plugins/generic/historykeeperplugin/: CMakeLists.txt
plugins/generic/icqdieplugin/: CMakeLists.txt
plugins/generic/jabberdiskplugin/: CMakeLists.txt
plugins/generic/juickplugin/: CMakeLists.txt
plugins/generic/otrplugin/: CMakeLists.txt
plugins/generic/pepchangenotifyplugin/: CMakeLists.txt
plugins/generic/qipxstatusesplugin/: CMakeLists.txt
plugins/generic/translateplugin/: CMakeLists.txt
plugins/generic/videostatusplugin/: CMakeLists.txt
plugins/generic/watcherplugin/: CMakeLists.txt
plugins/unix/: CMakeLists.txt
src/: CMakeLists.txt  Version.cmake  getdate.cmake  src.cmake
src/Certificates/: CMakeLists.txt
src/avcall/: CMakeLists.txt
src/contactmanager/: CMakeLists.txt
src/irisprotocol/: irisprotocol.cmake
src/libpsi/dialogs/: CMakeLists.txt
src/libpsi/tools/: CMakeLists.txt
src/libpsi/tools/zip/: CMakeLists.txt
src/options/: CMakeLists.txt
src/plugins/: CMakeLists.txt  plugins.cmake
src/plugins/dev/: CMakeLists.txt
src/plugins/dev/battleshipgameplugin/: CMakeLists.txt
src/plugins/generic/: CMakeLists.txt
src/plugins/generic/attentionplugin/: CMakeLists.txt
src/plugins/generic/autoreplyplugin/: CMakeLists.txt
src/plugins/generic/birthdayreminderplugin/: CMakeLists.txt
src/plugins/generic/captchaformsplugin/: CMakeLists.txt
src/plugins/generic/chessplugin/: CMakeLists.txt
src/plugins/generic/cleanerplugin/: CMakeLists.txt
src/plugins/generic/clientswitcherplugin/: CMakeLists.txt
src/plugins/generic/conferenceloggerplugin/: CMakeLists.txt
src/plugins/generic/contentdownloaderplugin/: CMakeLists.txt
src/plugins/generic/enummessagesplugin/: CMakeLists.txt
src/plugins/generic/extendedmenuplugin/: CMakeLists.txt
src/plugins/generic/extendedoptionsplugin/: CMakeLists.txt
src/plugins/generic/gmailserviceplugin/: CMakeLists.txt
src/plugins/generic/gnupgplugin/: CMakeLists.txt
src/plugins/generic/gomokugameplugin/: CMakeLists.txt
src/plugins/generic/historykeeperplugin/: CMakeLists.txt
src/plugins/generic/httpuploadplugin/: CMakeLists.txt
src/plugins/generic/icqdieplugin/: CMakeLists.txt
src/plugins/generic/imageplugin/: CMakeLists.txt
src/plugins/generic/imagepreviewplugin/: CMakeLists.txt
src/plugins/generic/jabberdiskplugin/: CMakeLists.txt
src/plugins/generic/juickplugin/: CMakeLists.txt
src/plugins/generic/messagefilterplugin/: CMakeLists.txt
src/plugins/generic/otrplugin/: CMakeLists.txt
src/plugins/generic/pepchangenotifyplugin/: CMakeLists.txt
src/plugins/generic/qipxstatusesplugin/: CMakeLists.txt
src/plugins/generic/screenshotplugin/: CMakeLists.txt
src/plugins/generic/skinsplugin/: CMakeLists.txt
src/plugins/generic/stopspamplugin/: CMakeLists.txt
src/plugins/generic/storagenotesplugin/: CMakeLists.txt
src/plugins/generic/translateplugin/: CMakeLists.txt
src/plugins/generic/videostatusplugin/: CMakeLists.txt
src/plugins/generic/watcherplugin/: CMakeLists.txt
src/plugins/unix/: CMakeLists.txt
src/plugins/unix/gnome3supportplugin/: CMakeLists.txt
src/privacy/: CMakeLists.txt
src/protocol/: protocol.cmake
src/psimedia/: CMakeLists.txt
src/sxe/: CMakeLists.txt
src/tabs/: CMakeLists.txt
src/tools/: CMakeLists.txt
src/whiteboarding/: CMakeLists.txt
src/widgets/: CMakeLists.txt
