project( psi-plus )
cmake_minimum_required( VERSION 2.8.11 )

set( CMAKE_MODULE_PATH "${CMAKE_MODULE_PATH}" "${CMAKE_CURRENT_SOURCE_DIR}/cmake/modules" )
option( QT4_BUILD "Build with Qt4 support" ON )
option( PLUGINS "Build psi-plus plugins" ON )
option( BUNDLED_IRIS "Build iris library bundled" ON )
option( ONLY_PLUGINS "Build psi-plus plugins only" OFF )

if( ${QT4_BUILD} )
	set( USE_QT5 OFF)
else( ${QT4_BUILD} )
	set( USE_QT5 ON)
	add_definitions( -DHAVE_QT5 )
endif( ${QT4_BUILD} )

IF( WIN32 )
	macro(remove_compiler_flag flag)
		string(REPLACE "${flag}" "" CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE}")
		string(REPLACE "${flag}" "" CMAKE_C_FLAGS_RELEASE "${CMAKE_C_FLAGS_RELEASE}")
	endmacro()
	remove_compiler_flag("-O3")
ELSE( WIN32 )
	set( LIB_SUFFIX "" CACHE STRING "Define suffix of directory name (32/64)" )
ENDIF( WIN32 )

if( NOT ${ONLY_PLUGINS} )
	if( ${BUNDLED_IRIS} )
		add_subdirectory( iris )
	else( ${BUNDLED_IRIS} )
		find_package( Iris REQUIRED )
	endif( ${BUNDLED_IRIS} )
	set( iris_LIB iris )
endif( NOT ${ONLY_PLUGINS} )
#TODO psi-plus build

if( ${PLUGINS} )
	add_subdirectory( src/plugins )
endif( ${PLUGINS} )
